2007-02-22  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/processor/StackFrameCommandSet.java 
	(executeGetValues): Pass a signature byte to VMFrame.getValue.
	* vm/reference/gnu/classpath/jdwp/VMFrame.java (getValue): Add
	signature parameter.

2007-02-22  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/CairoSurface.java
	(copyAreaNative): Pass surface pointer into copyAreaNative2().
	(copyAreaNative2): Add parameter for surface pointer.
	(getFlippedBuffer): Add parameter for surface pointer.
	(getGtkImage): Pass surface pointer into getFlippedBuffer().

2007-02-21  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/BufferedImageGraphcs.java
	(constructor): Add pre-multiplied colour model to types available for
	optimization.
	(updateBufferedImage): Change surface.getPixels() call to surface.getData().
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(drawImage): Add checks before using CairoSurface optimization.
	* gnu/java/awt/peer/gtk/CairoSurface.java
	(bufferPointer): Removed field.
	(sharedBuffer): New field.
	(CairoSurface(GtkImage)): Copy array rather than using setPixels() call.
	(CairoSurface(int,int,int)): Use getData() convenience method.
	(CairoSurface(SampleModel,CairoSurface,Rectangle,Point)): Remove reference
	to deleted bufferPointer field.
	(copyAreaNative): Update documentation, remove reference to bufferPointer.
	(copyAreaNative2): Remove reference to deleted bufferPointer field.
	(destroy): Remove reference to deleted bufferPointer field.
	(dispose): Updated to reflect new method signature for destroy().
	(drawSurface): Added documentation.
	(getData): New convience method.
	(getFlippedBuffer): Removed method parameters.
	(getGtkImage): Updated to reflect new method signature.
	(getPixels): Removed method.
	(nativeGetElem): Removed method.
	(netiveGetPixels): Removed method.
	(nativeSetElem): Removed method.
	(nativeSetPixels): Removed method.
	(setPixels): Removed method.
	(syncJavaToNative): New method.