@@ -1,3 +1,15 @@
+2007-02-22  Keith Seitz  <keiths@redhat.ecom>
+
+	* vm/refernece/gnu/classpath/jdwp/VMVirtualMachine.java
+	(getAllLoadedClassesCount): Remove.
+	(getAllLoadedClasses): Return a Collection.
+	* gnu/classpath/jdwp/processor/VirtualMachineCommandSet.java
+	(executeClassesBySignature): VMVirtualMachine.getAllLoadedClasses
+	now returns Collection.
+	(executeAllClasses): Likewise.
+	Get size of return from Colleciton instead of calling
+	getAllLoadedClassesCount.
+
 2007-02-22  Kyle Galloway  <kgallowa@redhat.com>
 
 	* gnu/classpath/jdwp/processor/StackFrameCommandSet.java 
